--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
 	 </style>
 </head>
 <body> 
-<h1>BIODATA KELOMPOK MAWAR</h1>
+<h1>BIODATA KELOMPOK</h1>
 <ul>
   <li><a class="active" href="#home">Nama Anggota</a></li>
   <li><a href="1510651079.html">Luthfy Rizaldy</a></li>
