--- a/1510651079.html
+++ b/1510651079.html
@@ -41,6 +41,6 @@
 <li>Nim     : 1510651079</li>
 <li>Alamat  : Jl. Banyuwangi 108 Mayang</li>
 </ul>
-<img src="ijal.jpg" width="300" height="300">
+<img src="ijal2.jpg" width="300" height="300">
 </body>
 </html>
